# volta

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
crates/volta_analysis/: Cargo.toml
crates/volta_analysis/src/: driver.rs  equiv.rs  lib.rs  logging.rs  lower_error.rs  lowered.rs  lowering.rs  numeric.rs  source_map.rs  symbolic.rs  symbols.rs  tensor_core.rs  types.rs
crates/volta_analysis/src/canon/: arena.rs  canonicalize.rs  coeff.rs  mod.rs  ops.rs
crates/volta_analysis/src/eval/: config.rs  error.rs  interp.rs  memory.rs  mod.rs  race.rs  value.rs  warp.rs
crates/volta_analysis/tests/: eval_tests.rs
crates/volta_bench/: Cargo.toml
crates/volta_bench/kernels/01_reduction/: Red-1.cu  Red-1.ptx  Red-2.cu  Red-2.ptx  Red-3.cu  Red-3.ptx  Red-4.cu  Red-4.ptx  Red-5_racy.cu  Red-5_racy.ptx  Red-6_racy.cu  Red-6_racy.ptx  Red-7_racy.cu  Red-7_racy.ptx
crates/volta_bench/kernels/02_matmul/: MatMul-1.cu  MatMul-1.ptx  MatMul-2.cu  MatMul-2.ptx  MatMul-3.cu  MatMul-3.ptx  MatMul-4.cu  MatMul-4.ptx  MatMul-5.cu  MatMul-5.ptx  MatMul-6.cu  MatMul-6.ptx  MatMul-7.cu
crates/volta_bench/kernels/03_attention/: Attention.cu  Attention.ptx  FA1-TC.cu  FA1-TC.ptx  FA1.cu  FA1.ptx  FA2-TC.cu  FA2-TC.ptx
crates/volta_bench/kernels/04_causal_attention/: Causal-Attention-fused.cu  Causal-Attention-fused.ptx  Causal-Attention-naive.cu  Causal-Attention-naive.ptx  Causal-FA1-TC-fused.cu  Causal-FA1-TC-fused.ptx  Causal-FA1-TC-naive.cu  Causal-FA1-TC-naive.ptx  Causal-FA1-fused.cu  Causal-FA1-fused.ptx  Causal-FA1-naive.cu  Causal-FA1-naive.ptx  Causal-FA2-TC-fused.cu  Causal-FA2-TC-fused.ptx  Causal-FA2-TC-naive.cu  Causal-FA2-TC-naive.ptx
crates/volta_bench/kernels/05_conv2d_llm/: Conv2D-opt.cu  Conv2D-opt.ptx  Conv2D-ref.cu  Conv2D-ref.ptx
crates/volta_bench/kernels/06_agent_gemm/: GEMM-1.cu  GEMM-1.ptx  GEMM-2.cu  GEMM-2.ptx  GEMM-3.cu  GEMM-3.ptx  MatMul-1-ref_32x32.cu  MatMul-1-ref_32x32.ptx
crates/volta_bench/kernels/07_tilelang/: 32x32x32-opt.ptx  32x32x32-ref.ptx  64x32x32-opt.ptx  64x32x32-ref.ptx  64x64x32-opt.ptx  64x64x32-ref.ptx
crates/volta_bench/kernels/08_races/: BucketPositions-post_fixed.cu  BucketPositions-post_fixed.ptx  BucketPositions-pre_racy.cu  BucketPositions-pre_racy.ptx  ComputeRange-post_fixed.cu  ComputeRange-post_fixed.ptx  ComputeRange-pre_racy.cu  ComputeRange-pre_racy.ptx  GradInput-post_fixed.cu  GradInput-post_fixed.ptx  GradInput-pre_racy.cu  GradInput-pre_racy.ptx  LayerNorm-post_fixed.cu  LayerNorm-post_fixed.ptx  LayerNorm-pre_racy.cu  LayerNorm-pre_racy.ptx  ReduceValue-post_fixed.cu  ReduceValue-post_fixed.ptx  ReduceValue-pre_racy.cu  ReduceValue-pre_racy.ptx  vector_utils.cuh
crates/volta_bench/src/: config.rs  lib.rs  main.rs  reporter.rs  runner.rs  z3_compare.rs
crates/volta_bench/src/benchmarks/: agent.rs  attention.rs  causal.rs  conv2d.rs  matmul.rs  mod.rs  races.rs  reduction.rs  tilelang.rs
crates/volta_cli/: Cargo.toml
crates/volta_cli/src/: main.rs  run_log.rs
crates/volta_common/: Cargo.toml
crates/volta_common/src/: file_cache.rs  lib.rs  report.rs
crates/volta_frontend/: Cargo.toml
crates/volta_frontend/src/: ascii.rs  ast.rs  instr.rs  instr_parse.rs  lex.rs  lib.rs  (+1 more)
crates/volta_z3/: Cargo.toml
crates/volta_z3/src/: lib.rs  translate.rs
docs/: ptx_syntax_guide.md
scripts/: extract_ptx_syntax.py
