[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
volta_analysis = { path = "./crates/volta_analysis" }
volta_bench = { path = "./crates/volta_bench" }
volta_common = { path = "./crates/volta_common" }
volta_frontend = { path = "./crates/volta_frontend" }

anyhow = "1.0"
ansi_term = "0.12.1"
clap = { version = "4.5.54", features = ["derive"] }
id_collections = "1.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
textwrap = "0.16.2"
thiserror = "2.0.17"
log = "0.4"
env_logger = "0.11"
stacker = "0.1"
fixedbitset = "0.5"
