[package]
name = "volta_cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "volta"
path = "src/main.rs"

[features]
default = []
logging = ["volta_analysis/logging", "dep:env_logger", "dep:log"]

[dependencies]
volta_analysis.workspace = true
volta_common.workspace = true
volta_frontend.workspace = true
volta_z3.workspace = true

anyhow.workspace = true
bincode.workspace = true
clap.workspace = true
env_logger = { workspace = true, optional = true }
log = { workspace = true, optional = true }

